# memorial

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  RedirectApp.py  config.py  data_extractor.py  dev-requirements.txt  docker-compose.yml  extract_data_for_sites.py  extract_metadata.py  hypercorn.toml  hypercorn_config.py  memorial.py  pyproject.toml  redirect_app.py  requirements.txt  setup.py  update-from-sheets.sh  uwsgi.ini
.github/workflows/: ci.yml  docker.yml
static/: robots.txt
static/css/: custom.css  styles.css
templates/: custom.css  redirect.html  redirectEN.html  redirect_default.html
tests/: conftest.py  test_basic.py  test_data_extractor.py  test_edge_cases.py  test_extract_data_for_sites.py  test_extract_metadata.py  test_favicon.py  test_maintenance_templates.py  test_multi_part_messages.py  test_normalization_and_params.py  test_redirect_core.py  test_site_image.py  test_status_code_messages.py  test_url_construction.py
